@@ -35,6 +35,7 @@ import org.ladysnake.cca.api.v3.component.sync.AutoSyncedComponent;
 import org.ladysnake.cca.api.v3.component.tick.ServerTickingComponent;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
@@ -101,7 +102,7 @@ public class TraitPlayerComponent implements AutoSyncedComponent, ServerTickingC
     }
 
     public Set<Identifier> getRevealedTraitIds() {
-        return Set.copyOf(revealedTraits);
+        return Collections.unmodifiableSet(new LinkedHashSet<>(revealedTraits));
     }
 
     public boolean hasActiveTrait(Identifier traitId) {
